// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToggle should assume data-active as false if active prop is false 1`] = `
<label
  className="btn-toggle-label"
  htmlFor="toggleButton"
>
  <button
    className="btn-toggle"
    data-active={false}
    id="toggleButton"
    onClick={[Function]}
    title=""
    type="button"
  />
</label>
`;

exports[`ButtonToggle should assume title value as the same as label if title are not passed 1`] = `
<label
  className="btn-toggle-label"
  htmlFor="toggleButton"
>
  <button
    className="btn-toggle"
    data-active={false}
    id="toggleButton"
    onClick={[Function]}
    title=""
    type="button"
  />
  my label
</label>
`;

exports[`ButtonToggle should data-active as true if active prop is true 1`] = `
<label
  className="btn-toggle-label"
  htmlFor="toggleButton"
>
  <button
    className="btn-toggle"
    data-active={true}
    id="toggleButton"
    onClick={[Function]}
    title=""
    type="button"
  />
</label>
`;

exports[`ButtonToggle should render without crashing 1`] = `
<label
  className="btn-toggle-label"
  htmlFor="toggleButton"
>
  <button
    className="btn-toggle"
    data-active={true}
    id="toggleButton"
    onClick={[Function]}
    title="my toggle button"
    type="button"
  />
  toggle button
</label>
`;

exports[`ButtonToggle should set data-active to false as default value 1`] = `
<label
  className="btn-toggle-label"
  htmlFor="toggleButton"
>
  <button
    className="btn-toggle"
    data-active={false}
    id="toggleButton"
    onClick={[Function]}
    title=""
    type="button"
  />
</label>
`;
